feat update all project